added scholar link

--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ twitter_username: alxndr_dttrch
 mastodon_username: mastodon.social/@alexdittrich
 linkedin_username: alexander-dittrich-41b834192
 telegram_username: # your Telegram user name
-scholar_userid: # your Google Scholar ID
+scholar_userid: -G2nWLMAAAAJ
 semanticscholar_id: # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 orcid_id: # your ORCID ID
