--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ icon: icon.png  # the emoji used as the favicon (alternatively, provide image na
 
 url: https://www.alexanderdittrich.org/ # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
-last_updated: true # set to true if you want to display last updated in the footer
+last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
@@ -68,7 +68,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: alexanderdittrich
 gitlab_username: # your GitLab user name
-twitter_username: alxndr_dttrch
+twitter_username: alexdttrch
 mastodon_username: mastodon.social/@alexdittrich
 linkedin_username: alexander-dittrich-41b834192
 telegram_username: # your Telegram user name
